--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "philip-bfy-server",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "./server/server.js",
   "scripts": {
-    "start": "node server/server.js",
+    "start": "node ./server/server.js",
     "dev": "nodemon server/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
